<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.milestonesys.mobilesdk.audiosample.ui.view.LoginFragment"
        android:label="@string/app_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_camerasListFragment"
            app:destination="@id/camerasListFragment"
            app:popUpTo="@id/nav_graph" />
    </fragment>

    <fragment
        android:id="@+id/camerasListFragment"
        android:name="com.milestonesys.mobilesdk.audiosample.ui.view.CamerasListFragment"
        android:label="@string/fragment_title_cameras_list"
        tools:layout="@layout/fragment_camera_list" >
        <action
            android:id="@+id/action_camerasListFragment_to_cameraDetailFragment"
            app:destination="@id/cameraDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraDetailFragment"
        android:name="com.milestonesys.mobilesdk.audiosample.ui.view.CameraDetailsFragment"
        android:label="@string/fragment_title_camera_details"
        tools:layout="@layout/fragment_camera_details">
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.milestonesys.mobilesdk.audiosample.ui.view.AboutFragment"
        android:label="@string/fragment_title_about"
        tools:layout="@layout/fragment_about"/>

    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@id/aboutFragment" />
</navigation>